--- a/bbs.conf
+++ b/bbs.conf
@@ -1,5 +1,5 @@
-[program:bbs]
+[program:mybbs]
 command=/usr/local/bin/gunicorn wsgi -c gunicorn.config.py
-directory=/var/www/bbs
+directory=/var/www/mybbs
 autostart=true
 autorestart=true
