修改配置文件

--- a/mongod.conf
+++ b/mongod.conf
@@ -1,5 +1,5 @@
 [program:mongod]
-command=/usr/bin/mongod --port 27017 --quiet --logpath /var/log/mongodb/mongod.log --logappend
+command=/usr/bin/mongod --port 27017 --quiet --logpath /var/log/mongodb/mongodb.log --logappend
 autostart=true
 user=root
 startsecs=3                   ; number of secs prog must stay running (def. 1)
