--- a/redis-server.conf
+++ b/redis-server.conf
@@ -1,8 +1,10 @@
 [program:redis]
-command=/usr/local/bin/redis-server /home/gamely/redis-stable/redis.conf
+command=/usr/bin/redis-server /etc/redis/redis.conf
 directory=/var/lib/redis
 user=redis
 autostart=true
 stopsignal=QUIT
 redirect_stderr=true
 stdout_logfile=/var/log/redis.log
+
+
